examples/test/testpolicy288.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy288
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key21: value47
      key11: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value47
          key10: value9
      podSelector:
        matchLabels:
          key43: value17
          key10: value46
          key4: value8
